--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,6 @@
  *= require_tree .
  *= require_self
  */
-= require main.css
-= require normalize.css
-= require normalize.min.css
+*= require main.css
+*= require normalize.css
+*= require normalize.min.css
