--- a/app/views/feelings/show.html.erb
+++ b/app/views/feelings/show.html.erb
@@ -1,9 +1,8 @@
-
 <h2 class="feeling"><%= @feeling.name %></h2>
 
 <% @images.each do |image| %>
 	
-	<div class="image"><%= image.url %></div>
+	<div class="image"><%= image_tag(image.url) %></div>
 	
 <% end %>
 
