--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,11 +15,11 @@
  */
 
 html, body {
+	min-height: 100%;
 	font-family: 'Montserrat Alternates', sans-serif;
 }
 
 .container-fluid {
-
 }
 
 .logo {
@@ -46,3 +46,16 @@ html, body {
 .main button {
 	margin-top: 11%;
 }
+
+.image {
+
+}
+
+.img-responsive {  
+	display: block;  
+	height: auto;  
+	max-width: 100%; 
+}
+
+
+
