--- a/app/views/feelings/show.html.erb
+++ b/app/views/feelings/show.html.erb
@@ -1,10 +1,18 @@
-<h2 class="feeling"><%= @feeling.name %></h2>
 
-<% @images.each do |image| %>
-	
-	<div class="image"><%= image_tag(image.url) %></div>
-	
-<% end %>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-xs-12">
+				<h2 class="feeling"><%= @feeling.name %></h2>
+
+				<% @images.each do |image| %>
+					
+					<div><%= image_tag(image.url, :class => "img-responsive") %></div>
+					
+
+				<% end %>
+			</div>
+		</div>
+	</div>
 
 
 
