--- a/app/views/feelings/show.html.erb
+++ b/app/views/feelings/show.html.erb
@@ -6,7 +6,7 @@
 
 				<% @images.each do |image| %>
 					
-					<div><%= image_tag(image.url, :class => "img-responsive") %></div>
+					<div class="image"><%= image_tag(image.url, :class => "img-responsive") %></div>
 					
 
 				<% end %>
