--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <!-- Bootstrap -->
     
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
+    <%= csrf_meta_tags %>
     <link href='http://fonts.googleapis.com/css?family=Montserrat+Alternates:400,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Fredoka+One' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
@@ -36,7 +36,7 @@
             <span class="icon-bar"></span>
           </button>
           <!-- LOGO &#x2764; -->
-          <a class="logo navbar-brand" href="#">HOW R<span>&hearts;</span>U FEELIN</a>
+          <a class="logo navbar-brand" href="/">HOW R<span>&hearts;</span>U FEELIN</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
