--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -54,11 +54,14 @@ html, body {
 
 li {
 	text-align: center;
-	text-decoration: none;
 }
 
-li:hover {
+.dropdown-menu li:hover {
 	font-size: 20px;
+}
+
+a:hover { 
+    text-decoration:none; 
 }
 
 .img-responsive {  
