--- a/app/assets/stylesheets/jTinder.css
+++ b/app/assets/stylesheets/jTinder.css
@@ -1,8 +1,7 @@
 html, body {
-    height: 100%;
     padding: 0;
     margin: 0;
-    position: relative;
+    /*position: relative;*/
 }
 
 body {
@@ -11,16 +10,22 @@ body {
 
 /* Wrapper with padding */
 .wrap  {
-    height: 650px;
+    height: 500px;
     max-width: 700px;
-    margin-top: -50px;
     margin: auto;
+    padding: 0px 8px;
+}
+
+@media only screen and (max-width: 500px) {
+    .wrap {
+        height:400px;
+    }
 }
 
 #tinderslide {
     position: relative;
     background: #fff;
-    width: 95%;
+    /*width: 95%;*/
     height: 85%;
 }
 
@@ -117,7 +122,7 @@ body {
 
 /* Image container */
 #tinderslide .img {
-    height: 90%;
+    height: auto;
     width: 100%;
     margin-bottom: 5px;
     position: relative;
@@ -194,7 +199,8 @@ body {
 /* jTinder images */
 #tinderslide .pane .img {
     /*background: url("pane5.jpg") no-repeat scroll center center;*/
-    background-size: cover;
+    /*background-size: cover;*/
+    /*padding-bottom: 200px;*/
 }
 
 /* jTinder status text */
