removed ruby version and added initial draft of about us page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,42 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<div class="main about">
+	<div class="jumbotron">
+		<div class="container">
+			<div class="header">
+				<h2>
+					howr<span class="redheart">&hearts;</span>ufeelin
+					<span class="highlight">team</span>
+				</h2>
+			</div>
+			<div class="row">
+				<div class="col-md-1"></div>
+				<div class="col-md-4">
+					<h3><a href="https://github.com/technosteve">Techno Steve</a></h3>
+					<p>Steve is a huge techno fan!  He enjoys spending his time along the beautiful coastline of South Carolina while coding in Ruby and Javascript and jamming to his favorite beats.  As the lead database architect at How R U Feelin, Steve is responsible for all things data.</p>
+				</div>
+				<div class="col-md-1"></div>
+				<div class="col-md-1"></div>
+				<div class="col-md-4">
+					<h3><a href="https://github.com/e-waverly">Big Boy Dean</a></h3>
+					<p>Dean is a native New Yorker who just got some terrible news: he has a milk allergy and can NEVER eat real pizza again. Please help cheer him up by letting us cheer you up with the dope images we've curated for you in How R U Feelin.</p>
+				</div>
+				<div class="col-md-1"></div>
+			</div>
+			<div class="row">
+				<div class="col-md-1"></div>
+				<div class="col-md-4">
+					<h3><a href="https://github.com/kevinjtsai">Bad rap Kev</a></h3>
+					<p>A native of Los Angeles, Kevin currently resides in Manhattan and spends his free time browsing through images on Buzfeed.  Strictly passionate about all the cute animal images he comes across, one of Kevin's goals with How R U Feelin is to deliver non-stop cuteness to users in a seamless and interactive way.  
+				</div>
+				<div class="col-md-1"></div>
+				<div class="col-md-1"></div>
+				<div class="col-md-4">
+					<h3><a href="https://github.com/jamallo">Spinnin' Jamall</a></h3>
+					<p>This is Jamall. He loves all playing at the intersection of creative arts and technology. Originally from Boston, he currently lives in Queens and spends his time overseeing papercutmag.com, creating music, learning to flip, and laughing.</p>
+				</div>
+				<div class="col-md-1"></div>
+			</div>
+		</div>
+	</div>
+</div> 
+
+
