--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -95,4 +95,43 @@ a:hover {
 	padding: 10px;
 }
 
+.main.about .jumbotron {
+	opacity: 0.85;
+	height: 425px;
+	width: 100%;
+	background-position: 0px -50px;
+	background-color: black;
+	color: white;
+}
+
+.main.about .jumbotron h2 {
+	margin-top: -5px;
+	font-size: 55px;
+	text-align: center;
+}
+
+.redheart {
+	color:#ff0000;
+	opacity: 0.9;
+	background-color: black;
+}
+
+.highlight {
+	color: #244E8B;
+	background-color: white;
+	padding-left: 15px;
+	padding-right: 15px;
+}
+
+.main.about p {
+	font-size: 10px;
+}
+
+.main.about a:hover {
+	color: white;
+}
+
+
+
+
 
