--- a/app/views/feelings/show.html.erb
+++ b/app/views/feelings/show.html.erb
@@ -6,7 +6,12 @@
             	<% for i in 1..10 do %>
             	<li id="lastslide">
             		<div>
-            			<h2>Sorry, this is the last image</h2>
+                        <div class="row">
+                            <h1>Sorry, new images coming soon!</h1>
+                        </div>
+                        <div class="row">
+                            <a class="logo navbar-brand" href="/">HOW R<span>&hearts;</span>U FEELIN <span style="font-size: 35px; color: black">NOW?</span></a>
+                        </div>
             		</div>
             	</li>
             	<% end %>
