--- a/app/assets/stylesheets/jTinder.css
+++ b/app/assets/stylesheets/jTinder.css
@@ -76,6 +76,29 @@ body {
     text-shadow: -1px -1px 0 rgba(0, 0, 0, .2);
 }
 
+#tinderslide li h1 {
+    color: black;
+    font-size: 30px;
+    text-align: center;
+    position: absolute;
+    top: 40%;
+    left: 0;
+    width: 100%;
+    margin-top: -25px;
+}
+
+#tinderslide li a {
+    color: black;
+    font-size: 30px;
+    text-align: center;
+    position: absolute;
+    top: 40%;
+    left: 0;
+    width: 100%;
+    text-shadow: -1px -1px 0 rgba(0, 0, 0, .2);
+    margin-top: 25px;
+}
+
 /* Image rotation */
 #tinderslide li.pane1 {
     -webkit-transform: rotate(-1deg);
