--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
 <div class="main about">
 	<div class="jumbotron">
-		<div class="container">
+		<div class="container-fluid">
 			<div class="header">
 				<h2>
 					howr<span class="redheart">&hearts;</span>ufeelin
