--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,7 @@
  */
 
 html, body {
-	min-height: 100%;
+	height: 100%;
 	font-family: 'Montserrat Alternates', sans-serif;
 }
 
@@ -33,6 +33,8 @@ html, body {
 
 .navbar {
 	background-color: white;
+	padding: 0;
+	margin: 0;
 }
 
 .main {
@@ -70,12 +72,36 @@ a:hover {
 	max-width: 100%; 
 }
 
-/*About Page*/
+/*Contact Page*/
 
-/*.contact {
+.main-contact {
+	background-image: url("http://i.imgur.com/9H1BoUo.jpg");
+	background-size:100% auto;
+	min-height: 100%;
+	color: #000000;
+	text-shadow: 1px 1px #FFFFFF;
+}
+
+.contact {
 	display: block;
 	margin: auto;
-}*/
+	padding-top: 15px;
+	width: 400px;
+	font-size: 20px;
+}
+
+#send-message {
+
+}
+
+#user_message {
+	padding: 0 20px;
+	width: 350px;
+}
+
+#email-button {
+	margin-bottom: 0 20px;
+}
 
 #social {
 	margin: auto;
@@ -88,12 +114,14 @@ a:hover {
 }
 
 #twitter-share {
-	padding: 10px;
+	padding: 0 10px;
 }
 
 #fb-share {
-	padding: 10px;
+	padding: 0 10px;
 }
+
+/*About Page*/
 
 .main.about .jumbotron {
 	opacity: 0.85;
