--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -21,26 +21,24 @@ window.twttr=(function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],t=window.
 				</div>
 			</div>
 		</div>
-		<div class="row">
-			<div class="col-xs-12 col-sm-12 col-md-12 contact">
-				<div id="social">
-					<ul>
-						<li id="twitter-share">
-							<a class="twitter-share-button" href="https://twitter.com/share"
-						  data-related="twitterdev"
-						  data-size="large"
-						  data-count="none">
-						Tweet
-							</a>
-						</li>
-						<li id="fb-share">
-							<div class="fb-share-button" data-href="http://www.howrufeelin.com" data-layout="box_count"></div>
-						</li>
-					</ul>
+
+<div class="row social-links">
+			<div class="col-md-6">
+				<a class="twitter-share-button" href="https://twitter.com/share"
+				  data-related="twitterdev"
+				  data-size="large"
+				  data-count="none">
+					Tweet
+					</a>
+			</div>
+
+			<div class="col-md-6 facebook">
+				<div class="fb-share-button" data-href="http://www.howrufeelin.com" data-layout="button">
 				</div>
 			</div>
-			<div class="col-xs-6 col-sm-6 col-md-6">
-			</div>
-		</div>
+		</div>	
+		
 	</div>
-</div>			
+</div>		
+
+
