--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/pages/about">About Us <span class="sr-only">(current)</span></a></li>
+            <li><a href="/pages/about">About Us <span class="sr-only">(current)</span></a></li>
             <li><a href="/pages/contact">Contact</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
