--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,8 +3,7 @@
 		<div class="container-fluid">
 			<div class="header">
 				<h2>
-					howr<span class="redheart">&hearts;</span>ufeelin
-					<span class="highlight">team</span>
+					HOW R<span class="redheart">&hearts;</span>U FEELIN
 				</h2>
 			</div>
 			<div class="row">
